--- a/styles.css
+++ b/styles.css
@@ -6,24 +6,114 @@ body {
 
 .content-wrapper {
     display: grid;
-    grid-template-columns: 0.75fr 7fr;
-    grid-template-rows: 2fr 5fr 0.5fr;
+    grid-template-columns: 1fr 7fr;
+    grid-template-rows: 1fr 5fr 0.25fr;
+    height: 100vh;
 }
 
 .header {
     background-color: white;
     grid-column: 2/3;
+    box-shadow: 0px 2px 4px 0px #535353;
+    padding: 0 30px 0 30px;
+
+    display: flex;
+    flex-direction: column;
+
 }
 
+.header-top-row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-bottom-row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.user-welcome {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.user-welcome img {
+    width: auto;
+    height: 70px;
+}
+
+.user-greeting .greeting {
+    font-size: 0.8em;
+}
+.user-greeting .name {
+    font-size: 1.5em;
+}
+
+
+.header-options {
+    display: flex;
+
+}
+
+.header-options ul {
+    list-style: none;
+}
+
+.user-settings img {
+    width: 25px;
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+}
+
+.search-bar img {
+    width: 25px;
+    margin-right: 10px;
+}
+
+.search-bar input {
+    border-radius: 10px;
+    width: 500px;
+    height: 25px;
+    background: #d3d3d35c;
+    border-width: 0px;
+}
+
+
+.user-settings {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.header-top-row img:hover,
+.user-settings p:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.05);
+}
+
+
+
+
+
+
+
 .navigation {
-    background-color: #bde0fe;
+    background-color: #60a5fa;
     grid-column: 1/2;
     grid-row: 1/3;
     color: white;
     font-weight: 900;
 
     display: grid;
+    grid-template-rows: auto auto 1fr;
+    grid-gap: 30px;
+
     justify-content: center;
+    min-width: 225px;
 }
 
 .nav-header {
@@ -39,16 +129,36 @@ body {
 }
 
 .navigation li {
-    margin: 10px;
+    margin: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.navigation li:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    -webkit-transform: scale(1.05);
+}
+
+.navigation img {
+    margin: 5px;
+    width: 25px;
+    filter: invert(100%) sepia(8%) saturate(0%) hue-rotate(200deg) brightness(104%) contrast(101%);
+}
+
+.navigation p {
+    margin: 5px;
 }
 
 
 .main {
     background-color: #f1faee;
     grid-column: 2/3;
+    display: grid;
+    margin-top: 5px;
 }
 
 .footer {
-    background-color: #a8dadc;
+    background-color: #60a5fa;
     grid-column: 1/3;
 }
